# Minesweeper

./: .gitignore  CMakeLists.txt  Minesweeper
src/: minesweeper.c
